@@ -20,6 +20,7 @@ export(insist)
 export(insist_)
 export(insist_rows)
 export(insist_rows_)
+export(is_uniq)
 export(just_warn)
 export(maha_dist)
 export(not_na)
